--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2"
+  },
+  "resolutions": {
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
