--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-router-dom": "^5.3.2",
+    "mini-css-extract-plugin": "2.4.5"
   },
   "resolutions": {
     "mini-css-extract-plugin": "2.4.5"
